--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "tddzs1tg06",
+    "name": "qduy209dev",
     "version": "1.2.14",
-    "description": "Không làm mà đòi có ăn=))",
+    "description": "hi toi la QDuy",
     "main": "main.js",
     "scripts": {
         "start": "node index",
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/tandung1/Bot12.git"
+        "url": "git+https://github.com/duydev209/rzibot.git"
     },
      "author": "CatalizCS",
     "license": "GPL-3.0",
